Se ajusta proxy conf y se hace peticion de prueba

--- a/webApp/src/app/app.component.html
+++ b/webApp/src/app/app.component.html
@@ -68,7 +68,7 @@
   <div class="card-container purple-container">
       <div class="inline-block w-4rem h-4rem bg-purple-500 text-white font-bold text-center p-4 border-round" *ngFor="let item of [1,2,3];">{{item}}</div>
 
-      <div class="inline-block w-4rem h-4rem bg-purple-500 text-white font-bold text-center p-4 border-round" *ngFor="let item of productos;">{{item}}</div>
+      <div class="inline-block w-4rem h-4rem bg-purple-500 text-white font-bold text-center p-4 border-round" *ngFor="let item of productos;">{{item['name']}}</div>
 
   </div>
 </div>
