--- a/webApp/src/app/app.component.html
+++ b/webApp/src/app/app.component.html
@@ -1,76 +1,166 @@
-
-<div class="surface-ground px-4 py-5 md:px-6 lg:px-8">
-  <div class="grid">
-      <div class="col-12 md:col-6 lg:col-3">
-          <div class="surface-card shadow-2 p-3 border-round">
-              <div class="flex justify-content-between mb-3">
-                  <div>
-                      <span class="block text-500 font-medium mb-3">Orders</span>
-                      <div class="text-900 font-medium text-xl">152</div>
-                  </div>
-                  <div class="flex align-items-center justify-content-center bg-blue-100 border-round" style="width:2.5rem;height:2.5rem">
-                      <i class="pi pi-shopping-cart text-blue-500 text-xl"></i>
-                  </div>
+<div class="ng-star-inserted">
+  <div class="min-h-screen flex flex-column surface-ground">
+    <div
+      class="bg-gray-900 py-3 px-6 shadow-2 flex align-items-center justify-content-between relative lg:static border-bottom-1 border-gray-800"
+      style="min-height: 84px">
+      <img
+        src="assets/images/blocks/logos/bastion-300.svg"
+        alt="Image"
+        height="40"
+        class="mr-0 lg:mr-6" /><a
+        pripple=""
+        pstyleclass="@next"
+        enterclass="hidden"
+        leavetoclass="hidden"
+        class="p-element p-ripple cursor-pointer block lg:hidden text-gray-400"
+        ><i class="pi pi-bars text-4xl"></i><span class="p-ink"></span
+      ></a>
+      <div
+        class="align-items-center flex-grow-1 justify-content-between hidden lg:flex absolute lg:static w-full bg-gray-900 left-0 top-100 z-1 shadow-2 lg:shadow-none border-1 lg:border-none border-gray-800">
+        <ul
+          class="list-none p-0 m-0 flex lg:align-items-center select-none flex-column lg:flex-row">
+          <li>
+            <a
+              pripple=""
+              class="p-ripple p-element flex px-6 p-3 lg:px-3 lg:py-2 align-items-center text-gray-400 hover:text-white hover:bg-gray-800 font-medium border-round cursor-pointer transition-colors transition-duration-150"
+              ><i class="pi pi-home mr-2"></i><span>Home</span
+              ><span class="p-ink"></span
+            ></a>
+          </li>
+          <li>
+            <a
+              pripple=""
+              pstyleclass="@next"
+              enterclass="hidden"
+              enteractiveclass="scalein"
+              leavetoclass="hidden"
+              leaveactiveclass="fadeout"
+              class="p-element p-ripple flex px-6 p-3 lg:px-3 lg:py-2 align-items-center text-gray-400 hover:text-white hover:bg-gray-800 font-medium border-round cursor-pointer transition-colors transition-duration-150"
+              ><i class="pi pi-users mr-2"></i><span>Customers</span
+              ><i class="pi pi-angle-down ml-auto lg:ml-3"></i
+              ><span class="p-ink"></span
+            ></a>
+            <ul
+              class="list-none py-3 px-6 m-0 lg:px-0 lg:py-0 border-round shadow-0 lg:shadow-2 lg:absolute bg-gray-900 hidden origin-top w-full lg:w-15rem cursor-pointer lg:border-1 border-gray-800">
+              <li>
+                <a
+                  pripple=""
+                  class="p-ripple p-element flex p-3 align-items-center text-gray-400 hover:text-white hover:bg-gray-800 transition-colors transition-duration-150"
+                  ><i class="pi pi-user-plus mr-2"></i
+                  ><span class="font-medium">Add New</span
+                  ><span class="p-ink"></span
+                ></a>
+              </li>
+              <li class="relative">
+                <a
+                  pripple=""
+                  pstyleclass="@next"
+                  enterclass="hidden"
+                  enteractiveclass="scalein"
+                  leavetoclass="hidden"
+                  leaveactiveclass="fadeout"
+                  class="p-element p-ripple flex p-3 align-items-center text-gray-400 hover:text-white hover:bg-gray-800 transition-colors transition-duration-150"
+                  ><i class="pi pi-search mr-2"></i
+                  ><span class="font-medium">Search</span
+                  ><i class="pi pi-angle-down ml-auto lg:-rotate-90"></i
+                  ><span class="p-ink"></span
+                ></a>
+                <ul
+                  class="list-none py-3 pl-3 m-0 lg:px-0 lg:py-0 border-round shadow-0 lg:shadow-2 lg:absolute bg-gray-900 hidden origin-top w-full lg:w-15rem cursor-pointer left-100 top-0 lg:border-1 border-gray-800">
+                  <li>
+                    <a
+                      pripple=""
+                      class="p-ripple p-element flex p-3 align-items-center text-gray-400 hover:text-white hover:bg-gray-800 transition-colors transition-duration-150"
+                      ><i class="pi pi-shopping-cart mr-2"></i
+                      ><span class="font-medium">Purchases</span
+                      ><span class="p-ink"></span
+                    ></a>
+                  </li>
+                  <li class="relative">
+                    <a
+                      pripple=""
+                      class="p-ripple p-element flex p-3 align-items-center text-gray-400 hover:text-white hover:bg-gray-800 transition-colors transition-duration-150"
+                      ><i class="pi pi-comments mr-2"></i
+                      ><span class="font-medium">Messages</span
+                      ><span class="p-ink"></span
+                    ></a>
+                  </li>
+                </ul>
+              </li>
+            </ul>
+          </li>
+          <li>
+            <a
+              pripple=""
+              class="p-ripple p-element flex px-6 p-3 lg:px-3 lg:py-2 align-items-center text-gray-400 hover:text-white hover:bg-gray-800 font-medium border-round cursor-pointer transition-colors transition-duration-150"
+              ><i class="pi pi-calendar mr-2"></i><span>Calendar</span
+              ><span class="p-ink"></span
+            ></a>
+          </li>
+          <li>
+            <a
+              pripple=""
+              class="p-ripple p-element flex px-6 p-3 lg:px-3 lg:py-2 align-items-center text-gray-400 hover:text-white hover:bg-gray-800 font-medium border-round cursor-pointer transition-colors transition-duration-150"
+              ><i class="pi pi-chart-line mr-2"></i><span>Stats</span
+              ><span class="p-ink"></span
+            ></a>
+          </li>
+        </ul>
+        <ul
+          class="list-none p-0 m-0 flex lg:align-items-center select-none flex-column lg:flex-row">
+          <li class="flex-order-2 lg:flex-order-0">
+            <div class="flex px-6 p-3 lg:px-3 lg:py-2">
+              <span class="p-input-icon-left w-full"
+                ><i class="pi pi-search text-gray-400"></i
+                ><input
+                  type="text"
+                  pinputtext=""
+                  placeholder="Search"
+                  class="p-inputtext p-component p-element bg-gray-800 text-gray-400 border-gray-800 w-full"
+              /></span>
+            </div>
+          </li>
+          <li class="border-top-1 border-gray-800 lg:border-top-none">
+            <a
+              pripple=""
+              class="p-ripple p-element flex px-6 p-3 lg:px-3 lg:py-2 align-items-center hover:bg-gray-800 font-medium border-round cursor-pointer transition-colors transition-duration-150"
+              ><img
+                src="assets/images/blocks/avatars/circle/avatar-f-1.png"
+                class="mr-3 lg:mr-0"
+                style="width: 32px; height: 32px" />
+              <div class="block lg:hidden">
+                <div class="text-white font-medium">Josephine Lillard</div>
+                <span class="text-gray-400 font-medium text-sm"
+                  >Marketing Specialist</span
+                >
               </div>
-              <span class="text-green-500 font-medium">24 new </span>
-              <span class="text-500">since last visit</span>
-          </div>
+              <span class="p-ink"></span
+            ></a>
+          </li>
+        </ul>
       </div>
-      <div class="col-12 md:col-6 lg:col-3">
-          <div class="surface-card shadow-2 p-3 border-round">
-              <div class="flex justify-content-between mb-3">
-                  <div>
-                      <span class="block text-500 font-medium mb-3">Revenue</span>
-                      <div class="text-900 font-medium text-xl">$2.100</div>
-                  </div>
-                  <div class="flex align-items-center justify-content-center bg-orange-100 border-round" style="width:2.5rem;height:2.5rem">
-                      <i class="pi pi-map-marker text-orange-500 text-xl"></i>
-                  </div>
-              </div>
-              <span class="text-green-500 font-medium">%52+ </span>
-              <span class="text-500">since last week</span>
-          </div>
-      </div>
-      <div class="col-12 md:col-6 lg:col-3">
-          <div class="surface-card shadow-2 p-3 border-round">
-              <div class="flex justify-content-between mb-3">
-                  <div>
-                      <span class="block text-500 font-medium mb-3">Customers</span>
-                      <div class="text-900 font-medium text-xl">28441</div>
-                  </div>
-                  <div class="flex align-items-center justify-content-center bg-cyan-100 border-round" style="width:2.5rem;height:2.5rem">
-                      <i class="pi pi-inbox text-cyan-500 text-xl"></i>
-                  </div>
-              </div>
-              <span class="text-green-500 font-medium">520  </span>
-              <span class="text-500">newly registered</span>
-          </div>
-      </div>
-      <div class="col-12 md:col-6 lg:col-3">
-          <div class="surface-card shadow-2 p-3 border-round">
-              <div class="flex justify-content-between mb-3">
-                  <div>
-                      <span class="block text-500 font-medium mb-3">Comments</span>
-                      <div class="text-900 font-medium text-xl">152 Unread</div>
-                  </div>
-                  <div class="flex align-items-center justify-content-center bg-purple-100 border-round" style="width:2.5rem;height:2.5rem">
-                      <i class="pi pi-comment text-purple-500 text-xl"></i>
-                  </div>
-              </div>
-              <span class="text-green-500 font-medium">85 </span>
-              <span class="text-500">responded</span>
-          </div>
-      </div>
+    </div>
+    <ul
+      class="list-none py-3 px-5 m-0 surface-section flex align-items-center font-medium overflow-x-auto border-top-1 border-bottom-1 surface-border">
+      <li class="pr-3">
+        <a class="cursor-pointer"><i class="pi pi-home text-blue-500"></i></a>
+      </li>
+      <li class="px-2"><i class="pi pi-angle-right text-500"></i></li>
+      <li class="px-2">
+        <a class="cursor-pointer text-blue-500 white-space-nowrap">Level 3</a>
+      </li>
+      <li class="px-2"><i class="pi pi-angle-right text-500"></i></li>
+      <li class="px-2">
+        <a class="cursor-pointer text-blue-500 white-space-nowrap">Level 2</a>
+      </li>
+      <li class="px-2"><i class="pi pi-angle-right text-500"></i></li>
+      <li class="px-2">
+        <a class="cursor-pointer text-900 white-space-nowrap">Level 1</a>
+      </li>
+    </ul>
+    <div class="p-5 flex flex-column flex-auto">
+      <div
+        class="border-2 border-dashed surface-border border-round surface-section flex-auto"></div>
+    </div>
   </div>
 </div>
-
-<div class="card">
-  <div class="card-container purple-container">
-      <div class="inline-block w-4rem h-4rem bg-purple-500 text-white font-bold text-center p-4 border-round" *ngFor="let item of [1,2,3];">{{item}}</div>
-
-      <div class="inline-block w-4rem h-4rem bg-purple-500 text-white font-bold text-center p-4 border-round" *ngFor="let item of productos;">{{item['name']}}</div>
-
-  </div>
-</div>
-
-
