--- a/webApp/src/app/app.component.html
+++ b/webApp/src/app/app.component.html
@@ -3,11 +3,14 @@
     <div
       class="bg-gray-900 py-3 px-6 shadow-2 flex align-items-center justify-content-between relative lg:static border-bottom-1 border-gray-800"
       style="min-height: 84px">
-      <img
+      <i class="pi pi-shopping-bag text-blue-500 text-4xl mr-5"
+      ></i>
+      <!-- <img
         src="assets/images/blocks/logos/bastion-300.svg"
         alt="Image"
         height="40"
-        class="mr-0 lg:mr-6" /><a
+        class="mr-0 lg:mr-6" /> -->
+        <a
         pripple=""
         pstyleclass="@next"
         enterclass="hidden"
