Sin implenta lazy load

--- a/webApp/src/app/app.component.html
+++ b/webApp/src/app/app.component.html
@@ -161,9 +161,11 @@
         <a class="cursor-pointer text-900 white-space-nowrap">Level 1</a>
       </li>
     </ul>
-    <div class="p-5 flex flex-column flex-auto">
+    <main class="p-5 flex flex-column flex-auto">
       <div
-        class="border-2 border-dashed surface-border border-round surface-section flex-auto"></div>
-    </div>
+        class="border-2 border-dashed surface-border border-round surface-section flex-auto">
+        <router-outlet></router-outlet>
+      </div>
+    </main>
   </div>
 </div>
